--- a/ProjectWebApi/Views/Project/AddProject.cshtml
+++ b/ProjectWebApi/Views/Project/AddProject.cshtml
@@ -1,7 +1,7 @@
-﻿@using TrialProject.Controller.Controllers;
-@model ProjectDto
+﻿@using Tasks.Models;
+@model Project
 
-<h2>Add Project</h2>
+<h2>Добавление проекта</h2>
 
 <form asp-action="AddProject">
     <div class="form-group">
@@ -18,6 +18,9 @@
         <label asp-for="id_ts" class="control-label"></label>
         <input asp-for="id_ts" class="form-control" />
         <span asp-validation-for="id_ts" class="text-danger"></span>
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addTSModal">
+                Добавить техническую спецификацию
+            </button>
     </div>
     <div class="form-group">
         <label asp-for="short_name" class="control-label"></label>
