--- a/ProjectWebApi/Views/TechnicalSpecification/Create.cshtml
+++ b/ProjectWebApi/Views/TechnicalSpecification/Create.cshtml
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addTSModal">Создать</button>
+                <input type="submit" data-target="#addTSModal" class="btn btn-primary" value="Создать">
             </div>
         </div>
     </div>
