--- a/ProjectWebApi/Views/Project/Edit.cshtml
+++ b/ProjectWebApi/Views/Project/Edit.cshtml
@@ -1,34 +1,31 @@
 ﻿@using Tasks.Models;
 @model Project
 
-<h2>Добавление проекта</h2>
+<h2>Edit Project</h2>
 
-<form asp-action="AddProject">
+<form asp-action="Edit" method="post">
+    <input type="hidden" asp-for="id_project" />
 
     <div class="form-group">
-        <label asp-for="project_name" class="control-label"></label>
+        <label asp-for="project_name"></label>
         <input asp-for="project_name" class="form-control" />
         <span asp-validation-for="project_name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="id_ts" class="control-label"></label>
+        <label asp-for="id_ts"></label>
         <input asp-for="id_ts" class="form-control" />
         <span asp-validation-for="id_ts" class="text-danger"></span>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addTSModal">
-                Добавить техническую спецификацию
-            </button>
     </div>
     <div class="form-group">
-        <label asp-for="short_name" class="control-label"></label>
+        <label asp-for="short_name"></label>
         <input asp-for="short_name" class="form-control" />
         <span asp-validation-for="short_name" class="text-danger"></span>
     </div>
     <div class="form-group">
-        <label asp-for="id_status" class="control-label"></label>
+        <label asp-for="id_status"></label>
         <input asp-for="id_status" class="form-control" />
         <span asp-validation-for="id_status" class="text-danger"></span>
     </div>
-    <div class="form-group">
-        <input type="submit" value="Создать" class="btn btn-primary" />
-    </div>
+    <button type="submit" class="btn btn-primary">Сохранить</button>
+    <a asp-action="GetProject" class="btn btn-secondary">Назад</a>
 </form>
