--- a/ProjectWebApi/Views/Project/AddProject.cshtml
+++ b/ProjectWebApi/Views/Project/AddProject.cshtml
@@ -14,9 +14,12 @@
         <label asp-for="id_ts" class="control-label"></label>
         <input asp-for="id_ts" class="form-control" />
         <span asp-validation-for="id_ts" class="text-danger"></span>
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addTSModal">
-                Добавить техническую спецификацию
+        <button asp-area="" asp-controller="TechnicalSpecification" asp-action="Create" type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+            Добавить техническую спецификацию
             </button>
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+            Добавить новую информацию
+        </button>
     </div>
     <div class="form-group">
         <label asp-for="short_name" class="control-label"></label>
@@ -31,4 +34,5 @@
     <div class="form-group">
         <input type="submit" value="Создать" class="btn btn-primary" />
     </div>
+
 </form>
