Add info project, without tasks

--- a/ProjectWebApi/Views/Project/AddProject.cshtml
+++ b/ProjectWebApi/Views/Project/AddProject.cshtml
@@ -14,9 +14,9 @@
         <label asp-for="id_ts" class="control-label"></label>
         <input asp-for="id_ts" class="form-control" />
         <span asp-validation-for="id_ts" class="text-danger"></span>
-        <button asp-area="" asp-controller="TechnicalSpecification" asp-action="Create" type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+        <button asp-area="" asp-controller="TechnicalSpecification" asp-action="Create" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
             Добавить техническую спецификацию
-            </button>
+        </button>
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
             Добавить новую информацию
         </button>
