--- a/ProjectWebApi/Views/Project/GetProjects.cshtml
+++ b/ProjectWebApi/Views/Project/GetProjects.cshtml
@@ -23,7 +23,8 @@
                 <td>@project.id_status</td>
                 <td>
                     <a asp-controller="Project" asp-action="Edit" asp-route-id="@project.id_project">Изменить</a> |
-                    <a asp-controller="Project" asp-action="Delete" asp-route-id="@project.id_project">Удалить</a>
+                    <a asp-controller="Project" asp-action="Delete" asp-route-id="@project.id_project">Удалить</a> |
+                    <a asp-controller="Project" asp-action="InfoProject" asp-route-id="@project.id_project">Подробнее</a>
                 </td>
             </tr>
         }
