Create info project, tasks

--- a/ProjectWebApi/Views/Project/Edit.cshtml
+++ b/ProjectWebApi/Views/Project/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Tasks.Models;
 @model Project
 
-<h2>Edit Project</h2>
+<h2>Редактирование проекта</h2>
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="id_project" />
